--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,15 @@
 #spring.jpa.hibernate.ddl-auto = update
 
 
-spring.datasource.url = jdbc:mysql://localhost:3306/agent_service?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.url = jdbc:mysql://localhost:3306/agent_service?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:sqlserver://hlakkab.database.windows.net:1433;database=service2;user=hlakkab@hlakkab;password=H@mzasalah2002;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
